# Bi-Histogram_equalization

./: .gitignore  CMakeLists.txt  README.md  WEEK2_README.md  academic_metrics.py  benchmark_omp.py  build_he_core.ps1  generate_visuals.py  requirements.txt  server.py
docs/: data_metrics.txt  project_overview.txt  steps_summary.txt
frontend/: app.js  index.html  styles.css
python/: pipeline.py
python/visualizations/: visualize.py
src/: common.h  core.cpp
src/member1/: README.md  data_metrics.h
src/member2/: README.md  statistics.h
src/member3/: README.md  guided_filter.h
